# httpx-ws

./: .all-contributorsrc  .gitignore  AGENTS.md  LICENSE  README.md  client.py  justfile  mkdocs.yml  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  copilot-setup-steps.yml  docs.yml
.zed/: settings.json
docs/: reference.md
docs/reference/: httpx_ws.md
docs/usage/: asgi.md  class_based_client.md  client.md  quickstart.md  subprotocols.md
httpx_ws/: __init__.py  _api.py  _exceptions.py  _ping.py  transport.py
tests/: conftest.py  test_api.py  test_transport.py
